Fix image paths and update concert ticket URL
- Use strings.TrimPrefix before relURL so paths with leading /
  correctly get the baseURL subpath prepended
- Update concert ticket link to cafecentral.de

--- a/data/links.yaml
+++ b/data/links.yaml
@@ -44,7 +44,7 @@
   logo: "/images/logos/facebook.png"
 
 - name: Concert Tickets
-  url: "https://loveyourartist.com/de/events/loaded-baxter-snerft-weinheim-W54Z6B"
+  url: "https://cafecentral.de/konzert/satanic-surfers/"
   type: Next Show
   logo: "/images/logos/tickets.png"
   subtitle: "26.02. Café Central Weinheim"
