changed preview video

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ title = "Baxter"
   artistName = "Baxter"
   announcement = "*Latest Album*"
   releaseTitle = "Between Punk And Bourgeoisie"
-  youtubeID = "iOP_eJ321Po"
+  youtubeID = "jy_L7wWIA5g"
   artworkImage = "/images/artwork.jpg"
   backgroundImage = "/images/background.jpg"
   overlayColor = "#717A97"
